tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__merge.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
⚪ Already up to date with [1mmain[0m (no new commits, no rebase needed)
⚪ Worktree preserved (--no-remove)
